# maz-python

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test.yml
maz/: __init__.py
maz/compositions/: __init__.py
maz/tools/: __init__.py
tests/: test_maz.py  test_maz_compositions.py  test_maz_tools.py
