[tool.poetry]
name = "maz"
version = "0.0.12"
description = "Functional programming tools."
authors = ["Rikard Olsson <rikard@ourstudio.se>"]
readme = "README.md"
packages = [{include = "maz"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]